--- a/Healthtechbd/AddDiagnosisTemplate.xaml
+++ b/Healthtechbd/AddDiagnosisTemplate.xaml
@@ -11,7 +11,8 @@
       Title="Add Diagnosis Template">
 
     <Page.Resources>
-        <local:MainModel x:Key="viewmodel"/>
+        <local:MainModel x:Key="mainmodel"/>
+        <local:TestModel x:Key="testmodel"/>
     </Page.Resources>
 
     <StackPanel>
@@ -67,14 +68,16 @@
 
                             <StackPanel Grid.Row="1" Grid.Column="0"  Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Medicines"/>
-                                <Grid DataContext="{StaticResource viewmodel}" Height="102">
+                                <Grid DataContext="{StaticResource mainmodel}" Height="102">
                                     <control:ChosenControl MedicinesLists="{Binding MedicinesLists}" SelectedMedicines="{Binding SelectedMedicines}"  DefaultMessage="Please Select Items."   ValueMemberPath="Id"  DisplayMemberPath="Name" Margin="-1,1,1,0"  />
                                 </Grid>
                             </StackPanel>
 
                             <StackPanel Grid.Row="1" Grid.Column="1"  Margin="5 0">
                                 <TextBlock Style="{StaticResource Level}" Text="Tests"/>
-                                <TextBox Style="{StaticResource InputField}" Height="100" Text=""/>
+                                <Grid DataContext="{StaticResource testmodel}" Height="102">
+                                    <control:TestChosenControl TestsLists="{Binding TestsLists}" SelectedTests="{Binding SelectedTests}"  DefaultMessage="Please Select Items."   ValueMemberPath="Id"  DisplayMemberPath="Name" Margin="-1,1,1,0"  />
+                                </Grid> 
                             </StackPanel>
 
                         </Grid>
